--- a/platform/lang-impl/src/com/intellij/execution/impl/SingleConfigurationConfigurable.form
+++ b/platform/lang-impl/src/com/intellij/execution/impl/SingleConfigurationConfigurable.form
@@ -52,7 +52,7 @@
         <border type="none"/>
         <children/>
       </xy>
-      <grid id="bb10e" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bb10e" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="5" bottom="3" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -87,9 +87,17 @@
           </component>
           <hspacer id="e4047">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="d7b04" class="com.intellij.ui.components.JBCheckBox" binding="myCbSingleton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="messages/ExecutionBundle" key="run.configuration.singleton"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
