--- a/java/java-impl/src/com/intellij/refactoring/introduceparameterobject/IntroduceParameterObjectForm.form
+++ b/java/java-impl/src/com/intellij/refactoring/introduceparameterobject/IntroduceParameterObjectForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myWholePanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="420" height="440"/>
+      <xy x="20" y="20" width="579" height="440"/>
     </constraints>
     <properties/>
     <clientProperties>
@@ -75,6 +75,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="c2c7f"/>
                   <text resource-bundle="messages/RefactoringBundle" key="target.destination.folder"/>
                 </properties>
               </component>
