--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/dialogs/CopyDialog.form
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/dialogs/CopyDialog.form
@@ -179,7 +179,7 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="b34c" class="com.intellij.ui.TitledSeparatorWithMnemonic">
+      <component id="b34c" class="com.intellij.ui.TitledSeparator">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
