--- a/platform/lang-impl/src/com/intellij/diagnostic/logging/LogConfigurationPanel.form
+++ b/platform/lang-impl/src/com/intellij/diagnostic/logging/LogConfigurationPanel.form
@@ -48,7 +48,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Show console when standard out changes"/>
+          <text resource-bundle="messages/ExecutionBundle" key="logs.show.console.on.stdout"/>
         </properties>
       </component>
       <component id="b4310" class="javax.swing.JCheckBox" binding="myShowConsoleOnStdErrCb" default-binding="true">
@@ -56,7 +56,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Show console when standard error changes"/>
+          <text resource-bundle="messages/ExecutionBundle" key="logs.show.console.on.stderr"/>
         </properties>
       </component>
     </children>
