IDEA-91559 (CVS: Import into CVS: disable Finish if the NameInRepository field is empty)

--- a/plugins/cvs/cvs-plugin/src/com/intellij/cvsSupport2/ui/experts/importToCvs/ImportSettingsStep.form
+++ b/plugins/cvs/cvs-plugin/src/com/intellij/cvsSupport2/ui/experts/importToCvs/ImportSettingsStep.form
@@ -21,7 +21,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="4cdd4" class="javax.swing.JLabel" binding="myNameLabel">
+          <component id="4cdd4" class="javax.swing.JLabel" binding="myModuleNameLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -69,7 +69,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="22e23" class="javax.swing.JLabel">
+          <component id="22e23" class="javax.swing.JLabel" binding="myModuleNameErrorMessage">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="250" height="-1"/>
