--- a/plugins/tasks/tasks-api/src/com/intellij/tasks/config/BaseRepositoryEditor.form
+++ b/plugins/tasks/tasks-api/src/com/intellij/tasks/config/BaseRepositoryEditor.form
@@ -28,7 +28,7 @@
                   <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="e3439" class="javax.swing.JLabel" binding="myUrlLabel">
+              <component id="fec04" class="com.intellij.ui.components.JBLabel" binding="myUrlLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -46,7 +46,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="92bf6" class="javax.swing.JLabel" binding="myUsernameLabel">
+              <component id="22736" class="com.intellij.ui.components.JBLabel" binding="myUsernameLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -64,7 +64,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="e202d" class="javax.swing.JLabel" binding="myPasswordLabel">
+              <component id="70c27" class="com.intellij.ui.components.JBLabel" binding="myPasswordLabel">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -82,27 +82,20 @@
                 </constraints>
                 <properties/>
               </component>
-              <grid id="f42b9" binding="myCustomLabel" layout-manager="BorderLayout" hgap="0" vgap="0">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </grid>
               <grid id="235e5" binding="myCustomPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children/>
               </grid>
-              <component id="1c583" class="javax.swing.JCheckBox" binding="myUseProxy">
+              <component id="1e777" class="com.intellij.ui.components.JBCheckBox" binding="myUseProxy">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <horizontalAlignment value="4"/>
                   <text value="Use pro&amp;xy"/>
                 </properties>
               </component>
