--- a/platform/lang-impl/src/com/intellij/platform/templates/GithubProjectGeneratorPeer.form
+++ b/platform/lang-impl/src/com/intellij/platform/templates/GithubProjectGeneratorPeer.form
@@ -35,13 +35,13 @@
         </constraints>
         <properties/>
       </component>
-      <component id="b66e3" class="com.intellij.ui.components.JBLabel" binding="myErrorMessage">
+      <component id="6cca1" class="javax.swing.JLabel" binding="myErrorMessage">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-52429"/>
-          <fontColor value="BRIGHTER"/>
+          <foreground color="-65434"/>
           <text value="Error message"/>
         </properties>
       </component>
