IDEA-68253 Issue trackers integration. Basic implementation.

--- a/plugins/tasks/tasks-api/src/com/intellij/tasks/config/BaseRepositoryEditor.form
+++ b/plugins/tasks/tasks-api/src/com/intellij/tasks/config/BaseRepositoryEditor.form
@@ -146,11 +146,13 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="ae3b0" class="javax.swing.JLabel" binding="myComment">
+              <component id="bb533" class="com.intellij.ui.components.JBLabel" binding="myComment">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <componentStyle value="SMALL"/>
+                  <fontColor value="BRIGHTER"/>
                   <text value="Use..."/>
                 </properties>
               </component>
